--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.0",
-        "laravel/framework": "~8.0",
-        "laravel/nova": "~3.0"
+        "php": "^7.4|^8.0"
     },
     "autoload": {
         "psr-4": {
